--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
    
     <!-- css styleshteet -->
-    <link rel="stylesheet" href="/scss/index.css">
+    <link rel="stylesheet" href="/css/index.css">
 
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -147,7 +147,7 @@
                 </div>
              
                   <div class="discountproduct">
-                     <h6 id="twentyfive">25% OFF ALL &nbsp;<span id="product">Products</span></h6>
+                     <h6 id="twentyfive">25% OFF ALL <span id="product">Products</span></h6>
                      <button id="viewmore">View More ></button>
                   </div>
 
@@ -345,6 +345,9 @@
                             <div class="footer-company-logo">
                                   <div class="footer-logo">
                                      <img src="/images/8670f041d9ff49728141cc53d1bb7f28-removebg-preview.png">
+                                  </div>
+                                  <div class="email">
+                                   <input type="email" placeholder="Email Address"> <button>Subscribe Now</button>
                                   </div>
                                   <div class="social-icon">
                                     <a href="#"><i class='fa fa-facebook'></i></a>
